Stop event tabs from overflowing

--- a/srht/scss/base.scss
+++ b/srht/scss/base.scss
@@ -288,6 +288,9 @@ code {
 
 .event-list {
   .event {
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
     padding: 0.5rem;
     margin: 0.5rem 0;
     background: #f5f5f5;
@@ -301,6 +304,9 @@ code {
     }
 
     h4 {
+      text-overflow: ellipsis;
+      white-space: nowrap;
+      overflow: hidden;
       margin-bottom: 0;
       padding: 0;
     }
